// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkRating should render correctly 1`] = `
<div
  aria-label="6.7 Average might recommend"
  className="bpk-rating"
>
  <span
    aria-hidden="true"
    className="bpk-text bpk-text--base bpk-rating--base-rating bpk-rating--medium-rating"
  >
    <strong>
      6.7
    </strong>
  </span>
  <div
    className="bpk-rating__text"
  >
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--base"
    >
      <strong>
        Average
      </strong>
    </span>
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--xs"
    >
      Might recommend
    </span>
  </div>
</div>
`;

exports[`BpkRating should render with 0 if value is below 0 1`] = `
<div
  aria-label="-1.3 Low bad option"
  className="bpk-rating custom-classname"
>
  <span
    aria-hidden="true"
    className="bpk-text bpk-text--base bpk-rating--base-rating bpk-rating--low-rating"
  >
    <strong>
      0
    </strong>
  </span>
  <div
    className="bpk-rating__text"
  >
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--base"
    >
      <strong>
        Low
      </strong>
    </span>
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--xs"
    >
      Bad option
    </span>
  </div>
</div>
`;

exports[`BpkRating should render with 9.0 if value is below 9 1`] = `
<div
  aria-label="9 Amazing brilliant"
  className="bpk-rating custom-classname"
>
  <span
    aria-hidden="true"
    className="bpk-text bpk-text--base bpk-rating--base-rating bpk-rating--high-rating"
  >
    <strong>
      9.0
    </strong>
  </span>
  <div
    className="bpk-rating__text"
  >
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--base"
    >
      <strong>
        Amazing
      </strong>
    </span>
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--xs"
    >
      Brilliant
    </span>
  </div>
</div>
`;

exports[`BpkRating should render with 10 if value is below 15 1`] = `
<div
  aria-label="15 Amazing brilliant"
  className="bpk-rating custom-classname"
>
  <span
    aria-hidden="true"
    className="bpk-text bpk-text--base bpk-rating--base-rating bpk-rating--high-rating"
  >
    <strong>
      10
    </strong>
  </span>
  <div
    className="bpk-rating__text"
  >
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--base"
    >
      <strong>
        Amazing
      </strong>
    </span>
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--xs"
    >
      Brilliant
    </span>
  </div>
</div>
`;

exports[`BpkRating should support custom class names 1`] = `
<div
  aria-label="6.7 Average might recommend"
  className="bpk-rating custom-classname"
>
  <span
    aria-hidden="true"
    className="bpk-text bpk-text--base bpk-rating--base-rating bpk-rating--medium-rating"
  >
    <strong>
      6.7
    </strong>
  </span>
  <div
    className="bpk-rating__text"
  >
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--base"
    >
      <strong>
        Average
      </strong>
    </span>
    <span
      aria-hidden="true"
      className="bpk-text bpk-text--xs"
    >
      Might recommend
    </span>
  </div>
</div>
`;
